# bounded-models

./: .gitignore  .pre-commit-config.yaml  README.md  bounded_model_improvements.md  hypothesis_faker_comparison.md  pyproject.toml  renovate.json5  sampler_coverage_testing.md  simple_unified_api.md  todo.md  validator_sampler_integration.md  zensical.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: api-reference.md  index.md  installation.md
docs/guide/: basic-usage.md  constant-fields.md  field-handlers.md  field-overrides.md  index.md
src/bounded_models/: __init__.py  _checkers.py  _core.py  _handlers.py  _model.py  _overrides.py  _registry.py
tests/: test_bounded.py  test_constants.py  test_overrides.py
tests/checkers/: test_base_model.py  test_enum.py  test_literal.py  test_numeric.py  test_sequence.py  test_string.py
