[project]
name = "bounded-models"
version = "0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
